Remove body margin

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <!-- <link rel="stylesheet" href="./app.css" type="text/css" /> -->
     </head>
 
-    <body class="body">
+    <body class="body" style="margin: 0px;">
         <script src="src/game.ts"></script>
     </body>
 
